Updating README and changing location to foxyclient-php.

--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,15 @@
     "repositories": [
         {
             "type": "package",
-            "package": {
+            "package":
+            {
                 "name": "foxycart/foxyclient",
                 "description": "FoxyClient - a PHP Guzzle based API Client for working with the Foxy Hypermedia API ",
                 "type": "library",
-                "homepage": "https://github.com/FoxyCart/foxyclient",
+                "homepage": "https://github.com/FoxyCart/foxyclient-php",
                 "version": "0.1.0",
                 "source": {
-                    "url": "git@github.com:FoxyCart/foxyclient.git",
+                    "url": "git@github.com:FoxyCart/foxyclient-php.git",
                     "type": "git",
                     "reference": "master"
                 },
