Updating for Guzzle 6.2

--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
                     "reference": "master"
                 },
                 "require": {
-                    "guzzlehttp/guzzle": "~5.2",
-                    "guzzlehttp/cache-subscriber": "0.1.*@dev",
-                    "php": ">=5.3.3"
+                    "guzzlehttp/guzzle": "~6.2",
+                    "php": ">=5.5",
+                    "kevinrob/guzzle-cache-middleware": "^2.0"
                 },
                 "autoload": {
                     "psr-0": {"Foxy\\FoxyClient": "src/"}
