--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
                 "source": {
                     "url": "git@github.com:FoxyCart/foxyclient-php.git",
                     "type": "git",
-                    "reference": "master"
+                    "reference": "2.0.0"
                 },
                 "require": {
                     "guzzlehttp/guzzle": "~6.2",
